--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fill-xpdf",
+  "name": "@henomis/fill-xpdf",
   "version": "0.0.1",
   "description": "Fill out pdf forms using XFDF",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/henomis/fill-xpdf"
+    "url": "git://github.com/henomis/fill-xpdf.git"
   },
   "keywords": [
     "pdf",
@@ -30,5 +30,8 @@
   "devDependencies": {
     "mocha": "^2.1.0",
     "temporary": "0.0.8"
+  },
+  "directories": {
+    "test": "test"
   }
 }
